2006-12-31  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-completion-mode): Use `natnump' instead of
	`wholenump' because of XEmacs.

2006-12-30  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-file-name-handler-alist): Add handler for
	`shell-command'.
	(tramp-handle-shell-command): New defun.
	(tramp-touch): Don't bind `shell-file-name' locally.

	* tramp-fish.el (tramp-fish-file-name-handler-alist): Add handler
	for `shell-command'.

	* tramp-util.el (tramp-advice-start-process-shell-command)
	(tramp-advice-call-process-shell-command): Bind
	`shell-command-switch' locally.

2006-12-29  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-call-process-region): New defun.
	(tramp-touch): Use `shell-command' instead of `call-process', in
	order to make it usable also for the `fish' method.

	* tramp-fish.el (tramp-fish-handle-insert-file-contents): Move
	point to the initial place after insertion.
	(tramp-fish-handle-write-region): Don't send zero length data.

	* tramp-util.el (tramp-advice-call-process-region): New defadvice.

2006-12-27  Michael Albinus  <michael.albinus@gmx.de>

	* Makefile.in: Add tramp-fish.el

	* tramp-fish.el: New package.

	* tramp.el (top): Require tramp-fish.
	(tramp-inodes): New defvar.
	(tramp-handle-expand-file-name): Cache "home-directory".
	(tramp-get-inode): New defun.

	* tramp-smb.el (tramp-smb-no-stat, tramp-smb-inodes)
	(tramp-smb-get-inode): Removed.  Apply new names.

	* tramp-util.el (tramp-advice-executable-find): Add check for
	`tramp-fish-file-name-handler'.

2006-12-26  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-action-process-alive)
	(tramp-wait-for-regexp): Pop connection buffer in case of error.
	(tramp-exists-file-name-handler): Handle also `default-directory'.
	(tramp-half-a-year, tramp-parse-time-months): New defconst.
	Transferred from tramp-smb.el.
	(tramp-time-less-p, tramp-time-subtract): New defuns.  Transferred
	from tramp-smb.el.